--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@freescan/billing": "^1.3.3",
+    "@freescan/billing": "^1.4.0",
     "@freescan/http": "^1.1.2",
-    "@freescan/skeleton": "^1.5.1",
+    "@freescan/skeleton": "^1.6.0",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
-    "ngx-bootstrap": "^1.6.5",
+    "ngx-bootstrap": "1.6.6",
     "rxjs": "^5.2.0",
     "ts-helpers": "1.1.2",
     "zone.js": "^0.8.4"
