package.json: skeleton/billing upgraded for SubscriptionService move

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 5003",
+    "start": "ng serve --host 360global.local --port 5003",
     "build": "ng build",
     "build:staging": "ng build -e staging -t production -aot --progress=false",
     "build:prod": "ng build -e prod -t production -aot --progress=false",
@@ -24,9 +24,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@freescan/billing": "^1.5.11",
+    "@freescan/billing": "^1.6.0",
     "@freescan/http": "^1.1.3",
-    "@freescan/skeleton": "^1.10.13",
+    "@freescan/skeleton": "^1.11.1",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "ngx-bootstrap": "1.6.6",
